<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_view_profile"
        app:showAsAction="never"
        android:title="@string/view_profile"
        android:orderInCategory="100"/>

    <item
        android:id="@+id/action_add_parent"
        app:showAsAction="never"
        android:title="@string/add_parent"
        android:orderInCategory="101"/>

    <item
        android:id="@+id/action_update_profile"
        app:showAsAction="never"
        android:title="@string/update_account"
        android:orderInCategory="100"/>

    <item
        android:id="@+id/action_logout"
        app:showAsAction="never"
        android:title="@string/logout"
        android:orderInCategory="101"/>
</menu>